Create FileManager class